--- a/3rd lab/formnea.html
+++ b/3rd lab/formnea.html
@@ -11,6 +11,5 @@
         <input type="text" id="s" name="s" value="">
         <button tpye="submit"  id="searchsubmit">Send data</button>
     </form>
-<!--     <iframe  name="Results" width="200px" height="1000px" style="text-align: center;"></iframe>
- --></body>
+</body>
 </html>
